tests/purs/failing/PolykindInstanceOverlapping.out
Error found:
in module [33mMain[0m
at tests/purs/failing/PolykindInstanceOverlapping.purs:12:1 - 13:19 (line 12, column 1 - line 13, column 19)

  Overlapping type class instances found for
  [33m                      [0m
  [33m  Main.ShowP (Proxy a)[0m
  [33m                      [0m
  The following instances were found:

    [33mMain.test1[0m
    [33mMain.test2[0m


in type class instance
[33m                             [0m
[33m  Main.ShowP (Proxy (a :: k))[0m
[33m                             [0m

See https://github.com/purescript/documentation/blob/master/errors/OverlappingInstances.md for more information,
or to contribute content related to this error.

